fix the content on smaller devices & some minor changes

--- a/src/Pages/Css/Style.css
+++ b/src/Pages/Css/Style.css
@@ -69,8 +69,8 @@ footer,
   background-image: url("/hero-image2.png");
   background-position: center;
   background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
+  width: cover;
+  height: auto;
 }
 
 #hero-btn {
@@ -104,8 +104,8 @@ footer,
 
 #hero-btn:hover {
   color: #fff;
-  border-color:#242424;
-  background-color: #004717;
+  border-color: #242424;
+  background-color: #00b118;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
@@ -149,6 +149,54 @@ iframe {
   }
 }
 
+@media (max-width: 520px) {
+  #hero-section {
+    flex-wrap: wrap;
+    text-align: center;
+    background-image: url("/hero-image3.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    width: contain;
+    height: auto;
+    position: relative;
+  }
+
+  #hero-container {
+    margin-top: 10px;
+  }
+
+  .hero-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .plate-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0;
+    margin-top: 100px;
+    margin-right: auto;
+  }
+
+
+}
+
+@media (max-width: 768px) {
+  #hero-section {
+    flex-wrap: wrap;
+  }
+
+  .plate-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0;
+    margin-right: auto;
+  }
+}
+
 /*---------------------------------------------------*/
 
 /* Recipe Page */
@@ -182,7 +230,7 @@ iframe {
   outline: none;
   background-color: #f8f9fa;
   font-size: 16px;
-  /* color: #555; */
+  color: #555;
 }
 
 .search-button {
@@ -193,7 +241,7 @@ iframe {
   cursor: pointer;
 }
 
-.fa-pan-frying {
+.fa-magnifying-glass {
   width: 18px;
   height: 18px;
   object-fit: cover;
